classic-with-waves/service-entry.yml
# **NOTE**: this file is generated by `dhall-render`.
# You should NOT edit it manually, your changes will be lost.

---
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  labels:
    product: support
    project: classic
    role: app-server
    role_group: app-server
    team: support
  name: classic-app-server-pod998-inbound
  namespace: classic
spec:
  endpoints:
  - address: classic.classic.svc.cluster.local
    labels:
      security.istio.io/tlsMode: istio
    ports:
      http: 80
  hosts:
  - classic.classic.pod998.zdmesh.io
  location: MESH_INTERNAL
  ports:
  - name: http
    number: 80
    protocol: http
  resolution: DNS
---
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  labels:
    product: support
    project: classic
    role: app-server
    role_group: app-server
    team: support
  name: classic-app-server-pod999
  namespace: classic
spec:
  endpoints:
  - address: pod999.zdmesh.io
    labels:
      security.istio.io/tlsMode: istio
    ports:
      http: 15443
  hosts:
  - classic.classic.pod999.zdmesh.io
  location: MESH_INTERNAL
  ports:
  - name: http
    number: 80
    protocol: http
  resolution: DNS
